@@ -215,6 +215,21 @@ chinstdir     =
 uninstall     = {59C4F14F-7590-45FC-BE9F-A67AB3590709}
 uninstparam   = /passive /norestart
 
+[Juice Receiver]
+
+category      = Entertainment
+describe      = Podcast Receiver
+website       = http://juicereceiver.sourceforge.net/
+scrape        = http://sourceforge.net/projects/juicereceiver/download/
+version       = Juice-([0-9]\.[0-9]\.[0-9][-a-z0-9]*)-Setup.exe
+download      = http://downloads.sourceforge.net/juicereceiver/
+filename      = Juice-#VERSION#-Setup.exe
+instparam     = /S
+upgrades      = false
+chinstdir     = /D=#INSTALL_DIR#
+uninstall     = Juice
+uninstparam   = /S
+
 [Songbird]
 
 category      = Entertainment
@@ -293,6 +308,21 @@ chinstdir     = /dir="#INSTALL_DIR#"
 uninstall     = Audacity #MAJORMINOR_VERSION# Beta_is1
 uninstparam   = /sp- /silent /norestart
 
+[Blender3D]
+
+category      = Productivity
+describe      = 3D Modeling
+website       = http://www.blender3d.org/
+scrape        = http://mirror.cs.umn.edu/blender.org/release/
+version       = Blender([0-9]\.[0-9]+[a-z]*)/
+download      = http://mirror.cs.umn.edu/blender.org/release/Blender#VERSION#/
+filename      = blender-#VERSION#-windows.exe
+instparam     = /S
+upgrades      = false
+chinstdir     = /D=#INSTALL_DIR#
+uninstall     = Blender
+uninstparam   = /S _?=#INSTALL_DIR#
+
 [BurnAtOnce]
 
 category      = Productivity
@@ -308,6 +338,37 @@ chinstdir     = /dir="#INSTALL_DIR#"
 uninstall     = burnatonce_is1
 uninstparam   = /sp- /silent /norestart
 
+[DeepBurner Free]
+
+category      = Productivity
+describe      = CD Burning
+website       = http://www.deepburner.com/
+scrape        = http://www.deepburner.com/?r=download
+version       = DeepBurner Free ([0-9]\.[0-9])
+download      = http://www.deepburner.com/download/
+filename      = DeepBurner#MAJOR_VERSION#.exe
+instparam     = -s
+upgrades      = false
+chinstdir     = 
+uninstall     = {1ADE23D7-7A1E-4AEC-BA5D-EB8A01BED943}
+uninstparam   = -s
+
+[Dia]
+
+category      = Productivity
+describe      = Diagram Creation
+website       = http://www.gnome.org/projects/dia/
+scrape        = http://sourceforge.net/projects/dia-installer/download/
+version       = dia-setup-([0-9]\.[0-9]+[-.0-9]+).zip
+download      = http://downloads.sourceforge.net/dia-installer/
+filename      = dia-setup-#VERSION#.zip
+installer     = dia-setup-#VERSION#.exe
+instparam     = /S
+upgrades      = false
+chinstdir     = /D=#INSTALL_DIR#
+uninstall     = Dia
+uninstparam   = /S _?=#INSTALL_DIR#
+
 [FreeMind]
 
 category      = Productivity
@@ -321,6 +382,22 @@ instparam     = /sp- /silent /norestart
 upgrades      = true
 chinstdir     = /dir="#INSTALL_DIR#"
 uninstall     = B991B020-2968-11D8-AF23-444553540000_is1
+uninstparam   = /sp- /silent /norestart
+
+[Gimp]
+
+category      = Productivity
+describe      = Image Manipulation 
+website       = http://www.gimp.org/
+scrape        = http://sourceforge.net/projects/gimp-win/download/
+version       = gimp-([0-9]\.[0-9]\.[0-9]+)-i586-setup.zip
+download      = http://downloads.sourceforge.net/gimp-win/
+filename      = gimp-#VERSION#-i586-setup.zip
+installer     = gimp-#VERSION#-i586-setup.exe
+instparam     = /sp- /silent /norestart
+upgrades      = true
+chinstdir     = /dir="#INSTALL_DIR#"
+uninstall     = WinGimp-#MAJOR_VERSION#.0-beta_is1
 uninstparam   = /sp- /silent /norestart
 
 [Google Desktop]
@@ -431,13 +508,29 @@ uninstparam   = /S
 ; Utilities
 ; #############################
 
+[Ant Renamer]
+
+category      = Utilities
+describe      = File Renamer
+website       = http://www.antp.be/software/renamer/
+scrape        = http://www.antp.be/software/renamer/download
+version       = Version ([0-9]\.[0-9]+\.[0-9])
+download      = http://http2.antp.be/antp/software/
+filename      = antrenamer#MAJOR_VERSION#_install.exe
+instparam     = /sp- /silent /norestart
+upgrades      = true
+chinstdir     = /dir="#INSTALL_DIR#"
+uninstall     = Ant Renamer #MAJOR_VERSION#_is1
+uninstparam   = /sp- /silent /norestart
+
 ; [AppSnap]
 
 ; category      = Utilities
 ; describe      = Application Installer
 ; website       = http://blog.genotrance.com/applications/appsnap/
-; scrape        = http://genotrance.com/code/appsnap/
+; scrape        = http://code.google.com/p/appsnap/download/list
 ; version       = appsnapsetup-([0-9]\.[0-9][.0-9]*).exe
+; download      = http://appsnap.googlecode.com/files/
 ; filename      = appsnapsetup-#VERSION#.exe
 ; instparam     = /S
 ; upgrades      = false
@@ -495,8 +588,9 @@ uninstparam   = /sp- /silent /norestart
 category      = Utilities
 describe      = GUI Tail Utility
 website       = http://blog.genotrance.com/applications/clump/
-scrape        = http://genotrance.com/code/clump/
+scrape        = http://code.google.com/p/clump/downloads/list
 version       = clumpsetup-v([0-9]\.[0-9]*).exe
+download      = http://clump.googlecode.com/files/
 filename      = clumpsetup-v#VERSION#.exe
 instparam     = /S
 upgrades      = false
@@ -516,6 +610,21 @@ upgrades      = false
 chinstdir     =
 uninstall     = {6855CCDD-BDF9-48E4-B80A-80DFB96FE36C}
 uninstparam   = /S /v/qn
+
+[KeePass]
+
+category      = Utilities
+describe      = Password Manager
+website       = http://keepass.sourceforge.net/
+scrape        = http://sourceforge.net/projects/keepass/download/
+version       = KeePass-([0-9]\.[0-9]+)-Setup.exe
+download      = http://downloads.sourceforge.net/keepass/
+filename      = KeePass-#VERSION#-Setup.exe
+instparam     = /sp- /silent /norestart
+upgrades      = true
+chinstdir     = /dir="#INSTALL_DIR#"
+uninstall     = KeePass Password Safe_is1
+uninstparam   = /sp- /silent /norestart
 
 [SevenZip]
 
@@ -548,6 +657,105 @@ uninstall     = Stickies #VERSION#
 uninstparam   = /s
 
 ; #############################
+; Fun and Games
+; #############################
+
+[BZFlag]
+
+category      = Fun and Games
+describe      = 3D Tank Battle Game
+website       = http://www.bzflag.org/
+scrape        = http://sourceforge.net/projects/bzflag/download/
+version       = bzflag-([0-9]\.[0-9]+\.[0-9]).exe
+download      = http://download.sourceforge.net/bzflag/
+filename      = bzflag-#VERSION#.exe
+instparam     = /S
+upgrades      = false
+chinstdir     = /D=#INSTALL_DIR#
+uninstall     = BZFlag#VERSION#
+uninstparam   = /S _?=#INSTALL_DIR#
+
+[Celestia]
+
+category      = Fun and Games
+describe      = Space Simulator
+website       = http://www.shatters.net/celestia/
+scrape        = http://sourceforge.net/projects/celestia/download/
+version       = celestia-win32-([0-9]\.[0-9]\.[0-9]).exe
+download      = http://download.sourceforge.net/celestia/
+filename      = celestia-win32-#VERSION#.exe
+instparam     = /sp- /silent /norestart
+upgrades      = true
+chinstdir     = /dir="#INSTALL_DIR#"
+uninstall     = Celestia_is1
+uninstparam   = /sp- /silent /norestart
+
+[Stellarium]
+
+category      = Fun and Games
+describe      = Space Simulator
+website       = http://www.stellarium.org/
+scrape        = http://sourceforge.net/projects/stellarium/download/
+version       = stellarium-([0-9]\.[0-9]\.[0-9]).exe
+download      = http://download.sourceforge.net/stellarium/
+filename      = stellarium-#VERSION#.exe
+instparam     = /sp- /silent /norestart
+upgrades      = true
+chinstdir     = /dir="#INSTALL_DIR#"
+uninstall     = Stellarium_is1
+uninstparam   = /sp- /silent /norestart
+
+[TuxPaint]
+
+category      = Fun and Games
+describe      = Drawing Program for Children
+website       = http://www.tuxpaint.org/
+scrape        = http://sourceforge.net/projects/tuxpaint/download/
+version       = tuxpaint-([0-9]\.[0-9]\.[0-9]+)-win32-installer.exe
+download      = http://downloads.sourceforge.net/tuxpaint/
+filename      = tuxpaint-#VERSION#-win32-installer.exe
+instparam     = /sp- /silent /norestart
+upgrades      = true
+chinstdir     = /dir="#INSTALL_DIR#"
+uninstall     = Tux Paint_is1
+uninstparam   = /sp- /silent /norestart
+
+[TuxPaint Stamps]
+
+category      = Fun and Games
+describe      = Rubber Stamps for TuxPaint
+website       = http://www.tuxpaint.org/
+scrape        = http://sourceforge.net/projects/tuxpaint/download/
+version       = tuxpaint-stamps-([0-9]+-[0-9]+-[0-9]+)-win32-installer.exe
+download      = http://downloads.sourceforge.net/tuxpaint/
+filename      = tuxpaint-stamps-#VERSION#-win32-installer.exe
+instparam     = /sp- /silent /norestart
+upgrades      = true
+chinstdir     = /dir="#INSTALL_DIR#"
+uninstall     = Tux Paint Stamps_is1
+uninstparam   = /sp- /silent /norestart
+
+; #############################
+; Libraries
+; #############################
+
+[GTK+]
+
+category      = Libraries
+describe      = GUI Toolkit
+website       = http://www.gtk.org/
+scrape        = http://sourceforge.net/projects/gimp-win/download/
+version       = gtk%%2B-([0-9]\.[0-9]+\.[0-9][-0-9]*)-setup.zip
+download      = http://downloads.sourceforge.net/gimp-win/
+filename      = gtk+-#VERSION#-setup.zip
+installer     = gtk+-#VERSION#-setup.exe
+instparam     = /sp- /silent /norestart
+upgrades      = true
+chinstdir     = /dir="#INSTALL_DIR#"
+uninstall     = WinGTK-#MAJOR_VERSION#_is1
+uninstparam   = /sp- /silent /norestart
+
+; #############################
 ; Development
 ; #############################
 
@@ -564,21 +772,6 @@ upgrades      = false
 chinstdir     =
 uninstall     = {8C8C2500-3756-4CFF-8CAD-E840A36AAB84}
 uninstparam   = /passive /norestart
-
-;[Ant]
-
-;category      = Development
-;describe      = Java-based Build Tool
-;website       = http://ant.apache.org/
-;scrape        = http://ant.apache.org/bindownload.cgi
-;version       = apache-ant-([0-9]\.[0-9]\.[0-9])-bin.zip
-;download      = http://apache.forbigweb.com/ant/binaries/
-;filename      = apache-ant-#VERSION#-bin.zip
-;instparam     = 
-;upgrades      = false
-;chinstdir     = 
-;uninstall     = 
-;uninstparam   = 
 
 [InnoSetup]
 
@@ -711,6 +904,7 @@ uninstparam   = /S _?=#INSTALL_DIR#
 ; download      =
 ; filename      =
 ; referer       =
+; installer     = 
 ; instparam     =
 ; upgrades      =
 ; chinstdir     =
@@ -726,6 +920,7 @@ uninstparam   = /S _?=#INSTALL_DIR#
 ; download      - Web URL from where application can be downloaded (defaults to scrape)
 ; filename      - Filename of the application at the download URL
 ; referer       - Web URL to set as the referer for the download URL (defaults to scrape)
+; installer     - Name of the installer executable if downloaded file is a ZIP
 ; instparam     - Flags to append for install
 ; upgrades      - true: application upgrades itself, false: uninstall then install
 ; chinstdir     - Flags to specify the install directory
